--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,6 +30,8 @@ section#login{
     transform: translate(-50%, -50%);
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.555);
+    transition: width 1s, height 1s;
+    -o-transition-timing-function: ease;
 }
 
 section#login > div#foto{
