--- a/estilos/style.css
+++ b/estilos/style.css
@@ -22,7 +22,7 @@ main{
 section#login{
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 510px;
     border-radius: 20px;
     position: absolute;
     top: 50%;
@@ -31,7 +31,7 @@ section#login{
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.555);
     transition: width 1s, height 1s;
-    -o-transition-timing-function: ease;
+    transition-timing-function: ease;
 }
 
 section#login > div#foto{
@@ -54,4 +54,57 @@ div#formulario > h1{
 
 div#formulario > p {
     font-size: 0.8em;
+}
+
+form > input[type=submit]{
+    display: block;
+    font-size: 1.em;
+    width: 100%;
+    height: 40px;
+    background-color: #2a5333;
+    color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 2px;
+}
+
+form > input[type=submit]:hover{
+    background-color: #6cc47f;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #ffffff;
+    color: #1f522a;
+    border: 1px solid #559964;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 5px;
+
+}
+
+form > a.botao > i{
+    font-size: 0.8em;
+}
+
+form > a.botao:hover{
+    background-color: #81df95;
+}
+
+form > div.campo{
+    background-color: #f860c5;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label{
+    display: none;
 }
